package ejercicio15;

public interface Algoritmo {
    String cifrar(String mensaje);
    String descifrar(String mensaje);
}
